# OCR-Sudoku-Solvers

./: README.md
sudoku-solvers/: .gitignore  CMakeLists.txt  main.cpp
sudoku-solvers/model/: SudokuGrid.cpp  SudokuGrid.h
sudoku-solvers/model/Proposition/: Proposition.h
sudoku-solvers/model/SudokuGrid/: SudokuGrid.h
sudoku-solvers/solvers/: Solver.cpp  Solver.h
sudoku-solvers/solvers/naive-solver/: NaiveSolver.cpp  NaiveSolver.h
sudoku-solvers/solvers/sat-solver/: SudokuCNF.cpp  SudokuCNF.h
